add translation strings for home page

--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -257,5 +257,46 @@
     "f-droid-page-f-droid-org-repo-section-text": "SimpleX Chat and F-Droid.org repositories sign builds with the different keys. To switch, please <a href='/docs/guide/chat-profiles.html#move-your-chat-profiles-to-another-device'>export</a> the chat database and re-install the app.",
     "jobs": "Join team",
     "please-enable-javascript": "Please enable JavaScript to see the QR code.",
-    "please-use-link-in-mobile-app": "Please use the link in the mobile app"
+    "please-use-link-in-mobile-app": "Please use the link in the mobile app",
+    "index-hero-h1": "Be Free",
+    "index-hero-h2": "Freedom & Security<br>of Your Communications",
+    "index-hero-p1": "The first network where you own your identity, contacts, and groups.",
+    "index-hero-download-desktop-btn-title": "Download SimpleX Desktop App",
+    "index-google-play-title": "Public iOS preview on TestFlight",
+    "index-f-droid-title": "SimpleX F-Droid Repository",
+    "index-security-assessment-title": "security assessment",
+    "index-security-review-2022-title": "Security Review 2022",
+    "index-security-review-2024-title": "Security Review 2024",
+    "index-security-audits-label": "Security Audits",
+    "index-publications-privacy-guides-title": "messenger recommendations",
+    "index-publications-whonix-title": "Whonix messenger recommendations",
+    "index-publications-heise-title": "publication",
+    "index-publications-kuketz-title": "review",
+    "index-publications-optout-title": "podcast interview",
+    "worlds-most-secure-messaging": "World's Most Secure Messaging",
+    "index-messaging-p1": "SimpleX messaging has cutting-edge end-to-end encryption.",
+    "index-messaging-p2": "For your security, servers can’t see your messages <span>or who you talk to.</span>",
+    "index-messaging-cta": "Learn more about SimpleX messaging",
+    "index-nextweb-h2": "You Own<br>The Next Web",
+    "index-nextweb-p1": "SimpleX is founded on the belief that <span>you must own your identity, contacts and communities.</span>",
+    "index-nextweb-p2": "Open and decentralized network lets you connect with people and share ideas: be free and secure.",
+    "index-token-h2": "Communities That Last",
+    "index-token-p1": "You will support your favorite groups with future Community vouchers.",
+    "index-token-p2": "Vouchers will pay for servers, to let your communities stay free and independent.",
+    "index-token-cta": "Learn more about Community Vouchers",
+    "index-roadmap-h2": "SimpleX Roadmap to Free Internet",
+    "index-roadmap-2025": "2025",
+    "index-roadmap-2025-title": "Scale to Large Communities",
+    "index-roadmap-2025-desc": "Escaping centralized platforms",
+    "index-roadmap-2026": "2026",
+    "index-roadmap-2026-title": "Sustainable Communities & Servers",
+    "index-roadmap-2026-desc": "Launching Community Vouchers",
+    "index-roadmap-2027": "2027",
+    "index-roadmap-2027-title": "Make Your Communities Grow",
+    "index-roadmap-2027-desc": "Tools to promote your communities",
+    "index-directory-h2": "Join SimpleX Communities",
+    "index-directory-p1": "Hundreds of thousands people already trust SimpleX messaging.",
+    "index-directory-p2": "Find your communities in SimpleX directory and create your own!",
+    "index-directory-cta": "View SimpleX Directory",
+    "index-directory-users-group-title": "SimpleX users group"
 }
